--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "countries-list": "^3.1.1",
     "date-fns": "2.28.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
