--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-OPENAI_API_KEY=SECRET KEY
+# OpenAI API Key
+OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+
+# MongoDB URI
+
+MONGODB_URI="mongodb+srv://anujkumarofficial2004:anujjsengar@aoidev.mum2m.mongodb.net/Users?retryWrites=true&w=majority"
