--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "latest",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -47,8 +47,11 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
-    "jsonwebtoken": "latest",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
+    "mogodb": "^0.0.1-security",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "^14.2.23",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
